--- a/restapi-flask/docker-compose.yml
+++ b/restapi-flask/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     ports:
       - 5000:5000
     restart: always
+    environment:
+      - FLASK_ENV=development
     depends_on:
       - mongodb
     volumes:
