--- a/restapi-flask/Dockerfile
+++ b/restapi-flask/Dockerfile
@@ -2,6 +2,8 @@ FROM python:3.9.19-slim-bookworm
 WORKDIR /app
 COPY requirements.txt .
 RUN pip install -r requirements.txt
-COPY app.py .
+COPY wsgi.py .
+COPY config.py .
+COPY application .
 EXPOSE 5000
-CMD ["python", "app.py"]
+CMD ["python", "wsgi.py"]
