--- a/restapi-flask/docker-compose.yml
+++ b/restapi-flask/docker-compose.yml
@@ -16,7 +16,11 @@ services:
     restart: always
     environment:
       - FLASK_ENV=development
+      - MONGODB_DB=users
+      - MONGODB_HOST=mongodb
+      - MONGODB_USER=admin
+      - MONGODB_PASSWORD=admin
     depends_on:
       - mongodb
     volumes:
-      - .:/app
+      - ./application:/app/application
