fix: fix invocation of docker compose for nixos

--- a/restapi-flask/Makefile
+++ b/restapi-flask/Makefile
@@ -4,5 +4,5 @@ test:
 	@pytest -v --disable-warnings
 
 compose:
-	@docker-compose build
-	@docker-compose up
+	@docker compose build
+	@docker compose up
