refactor: refactor dockerfile

--- a/restapi-flask/Dockerfile
+++ b/restapi-flask/Dockerfile
@@ -2,8 +2,7 @@ FROM python:3.9.19-slim-bookworm
 WORKDIR /app
 COPY requirements.txt .
 RUN pip install -r requirements.txt
-COPY wsgi.py .
-COPY config.py .
-COPY application .
+COPY application application
+COPY wsgi.py config.py ./
 EXPOSE 5000
 CMD ["python", "wsgi.py"]
