feat: some tests, bandit (#1)
* fix: fix invocation of docker compose for nixos

* feat: add patch method to user api

* test: add test for patch method

* feat: add delete method

* test: add  delete method test

* refactor: refactor dockerfile

* feat: add healthcheck capability

* tests: add bandit call

* fix: get correct interface to bind

--- a/restapi-flask/Makefile
+++ b/restapi-flask/Makefile
@@ -1,8 +1,9 @@
 APP = restapi
 
 test:
+	@bandit -x ./tests -r .
 	@pytest -v --disable-warnings
 
 compose:
-	@docker-compose build
-	@docker-compose up
+	@docker compose build
+	@docker compose up
