feat: add helm to project as well as mongodb chart

--- a/restapi-flask/Makefile
+++ b/restapi-flask/Makefile
@@ -15,6 +15,14 @@ setup-dev:
 		--for=condition=ready pod \
 		--selector=app.kubernetes.io/component=controller \
 		--timeout=500s
+	@helm upgrade \
+		--set image.tag="5.0.8" \
+		--set auth.rootPassword="root" \
+		--install mongodb ./kubernetes/charts/mongodb
+	@kubectl wait \
+		--for=condition=ready pod \
+		--selector=app.kubernetes.io/component=mongodb \
+		--timeout=500s
 
 teardown-dev:
 	@kind delete clusters kind
