--- a/restapi-flask/Makefile
+++ b/restapi-flask/Makefile
@@ -1,4 +1,4 @@
-APP = restapi
+APP = restapi-flask
 
 test:
 	@bandit -x ./tests -r .
@@ -7,3 +7,30 @@ test:
 compose:
 	@docker compose build
 	@docker compose up
+
+setup-dev:
+	@kind create cluster --config kubernetes/config/config.yaml
+	@kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/kind/deploy.yaml
+	@kubectl wait --namespace ingress-nginx \
+		--for=condition=ready pod \
+		--selector=app.kubernetes.io/component=controller \
+		--timeout=500s
+	@helm upgrade \
+		--set image.tag="5.0.8" \
+		--set auth.rootPassword="root" \
+		--install mongodb ./kubernetes/charts/mongodb
+	@kubectl wait \
+		--for=condition=ready pod \
+		--selector=app.kubernetes.io/component=mongodb \
+		--timeout=500s
+
+teardown-dev:
+	@kind delete clusters kind
+
+deploy-dev:
+	@docker build -t $(APP):latest .
+	@kind load docker-image $(APP):latest
+	@kubectl apply -f kubernetes/manifests
+	@kubectl rollout restart deploy $(APP)
+
+dev: setup-dev deploy-dev
